Update some features in filtering model

--- a/notebook/reccoffee_filtering.ipynb
+++ b/notebook/reccoffee_filtering.ipynb
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3CBz7KFksBx7",
-        "outputId": "736b656b-f50a-455e-cfb8-4d96d4c1a685"
+        "outputId": "0a2de2a6-254b-4a59-c5a7-85d0402fa013"
       },
       "execution_count": 1,
       "outputs": [
@@ -73,8 +73,7 @@
         "# Modelling\n",
         "from sklearn import svm\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.ensemble import RandomForestClassifier"
       ]
     },
     {
@@ -98,7 +97,7 @@
           "height": 669
         },
         "id": "PhHAjYbuzjBc",
-        "outputId": "9960bc96-8edb-438b-f034-06b4685f1f07"
+        "outputId": "86b0994a-638c-40bb-da0a-3e3ef0d22930"
       },
       "execution_count": 3,
       "outputs": [
@@ -157,7 +156,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1ad0e11a-a91f-4e34-8fad-fcbd9a342357\">\n",
+              "  <div id=\"df-2091e5a7-a728-428f-ac54-53e01002e1f0\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -276,7 +275,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1ad0e11a-a91f-4e34-8fad-fcbd9a342357')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2091e5a7-a728-428f-ac54-53e01002e1f0')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -327,12 +326,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1ad0e11a-a91f-4e34-8fad-fcbd9a342357 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2091e5a7-a728-428f-ac54-53e01002e1f0 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1ad0e11a-a91f-4e34-8fad-fcbd9a342357');\n",
+              "          const element = document.querySelector('#df-2091e5a7-a728-428f-ac54-53e01002e1f0');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -371,7 +370,7 @@
           "height": 206
         },
         "id": "WGZiAnYU1ImR",
-        "outputId": "f3967266-80eb-43df-b02c-2f9f9a94be59"
+        "outputId": "5706afeb-c3ae-4391-e7f7-3b66c35a2f76"
       },
       "execution_count": 4,
       "outputs": [
@@ -395,7 +394,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-93d12f6f-904f-4cd9-92e7-d94cf512fa87\">\n",
+              "  <div id=\"df-e7a911e3-768e-4329-ae91-a7cfbda2eb43\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -472,7 +471,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93d12f6f-904f-4cd9-92e7-d94cf512fa87')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e7a911e3-768e-4329-ae91-a7cfbda2eb43')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -523,12 +522,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-93d12f6f-904f-4cd9-92e7-d94cf512fa87 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e7a911e3-768e-4329-ae91-a7cfbda2eb43 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-93d12f6f-904f-4cd9-92e7-d94cf512fa87');\n",
+              "          const element = document.querySelector('#df-e7a911e3-768e-4329-ae91-a7cfbda2eb43');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -567,7 +566,7 @@
           "height": 206
         },
         "id": "mXDNfc84rLYA",
-        "outputId": "911a4cf8-2ab6-422c-9c9a-588bac3cd3be"
+        "outputId": "3190d1f8-f557-4d71-ead3-d6a5d2262683"
       },
       "execution_count": 5,
       "outputs": [
@@ -591,7 +590,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2bba62fa-78ea-4c22-883c-a82004e7ce0c\">\n",
+              "  <div id=\"df-f6ac62c9-2a1f-46fd-b57f-55fd9ce9a21f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -668,7 +667,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2bba62fa-78ea-4c22-883c-a82004e7ce0c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f6ac62c9-2a1f-46fd-b57f-55fd9ce9a21f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -719,12 +718,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-2bba62fa-78ea-4c22-883c-a82004e7ce0c button.colab-df-convert');\n",
+              "          document.querySelector('#df-f6ac62c9-2a1f-46fd-b57f-55fd9ce9a21f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-2bba62fa-78ea-4c22-883c-a82004e7ce0c');\n",
+              "          const element = document.querySelector('#df-f6ac62c9-2a1f-46fd-b57f-55fd9ce9a21f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -804,7 +803,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FktQKgORur7a",
-        "outputId": "de914e4d-adb3-4e1e-9f02-19b7839fe392"
+        "outputId": "6b32b1f3-fa71-460c-cbf2-bc8a29b2737c"
       },
       "execution_count": 8,
       "outputs": [
@@ -831,7 +830,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WU92VcoEuvAs",
-        "outputId": "d87068c2-aa82-45fa-c9bf-fe4d28c8cff8"
+        "outputId": "eaae5830-b71c-4044-f3e2-a42b15dd093d"
       },
       "execution_count": 9,
       "outputs": [
@@ -855,7 +854,7 @@
           "height": 266
         },
         "id": "b6zA8C2L0w2g",
-        "outputId": "209a31df-e99f-49a6-ce22-3ff4fa3a98d1"
+        "outputId": "abd1f472-eb47-454f-d9a5-f576ee8e9963"
       },
       "execution_count": 10,
       "outputs": [
@@ -883,7 +882,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-50ead4f9-9656-4d08-b47b-7f8c69fc9225\">\n",
+              "  <div id=\"df-e689cfbe-c100-4e52-8017-6156fffaf3ed\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -938,7 +937,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50ead4f9-9656-4d08-b47b-7f8c69fc9225')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e689cfbe-c100-4e52-8017-6156fffaf3ed')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -989,12 +988,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-50ead4f9-9656-4d08-b47b-7f8c69fc9225 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e689cfbe-c100-4e52-8017-6156fffaf3ed button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-50ead4f9-9656-4d08-b47b-7f8c69fc9225');\n",
+              "          const element = document.querySelector('#df-e689cfbe-c100-4e52-8017-6156fffaf3ed');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1040,7 +1039,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "74NxZJUrzk4I",
-        "outputId": "71215d82-8225-42d7-b031-1a1e78715030"
+        "outputId": "b98c20e2-f67c-4658-ac78-d78cccf093ce"
       },
       "execution_count": 11,
       "outputs": [
@@ -1067,7 +1066,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "psAYe2Fmznsj",
-        "outputId": "b1655146-a05c-475d-d42f-88f3e907a4da"
+        "outputId": "2af4f1c6-88dd-4759-9cbb-0f00785ca758"
       },
       "execution_count": 12,
       "outputs": [
@@ -1091,7 +1090,7 @@
           "height": 249
         },
         "id": "mUHH6QrV0vNx",
-        "outputId": "a913d05f-144a-4962-f8bf-905d6fdfb2e1"
+        "outputId": "9ff260e7-0128-4299-9a21-f007c3ff69a6"
       },
       "execution_count": 13,
       "outputs": [
@@ -1119,7 +1118,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-288551eb-cd80-4016-906e-1a4d0cc206e8\">\n",
+              "  <div id=\"df-ed28739d-7810-46c4-a98c-4f2baddb5190\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1174,7 +1173,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-288551eb-cd80-4016-906e-1a4d0cc206e8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed28739d-7810-46c4-a98c-4f2baddb5190')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1225,12 +1224,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-288551eb-cd80-4016-906e-1a4d0cc206e8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ed28739d-7810-46c4-a98c-4f2baddb5190 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-288551eb-cd80-4016-906e-1a4d0cc206e8');\n",
+              "          const element = document.querySelector('#df-ed28739d-7810-46c4-a98c-4f2baddb5190');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1276,7 +1275,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NGVXLXV10VEV",
-        "outputId": "9ca29e4a-a3d6-4a22-9309-b23e59d26560"
+        "outputId": "d4200e04-2dd5-40c9-e3dd-4b21d74ae1d9"
       },
       "execution_count": 14,
       "outputs": [
@@ -1303,7 +1302,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-KeX0ZN6CgTA",
-        "outputId": "f7643c26-dd01-4aa8-b4d1-46ef3d8bf74a"
+        "outputId": "c198d1ec-57c3-4e8f-8754-0dc4307614ac"
       },
       "execution_count": 15,
       "outputs": [
@@ -1311,7 +1310,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['Ethiopia Oromia Guji Washed']\n"
+            "['Ethiopia Kayon Mountain']\n"
           ]
         }
       ]
@@ -1327,7 +1326,7 @@
           "height": 249
         },
         "id": "neUcBhY70loW",
-        "outputId": "3c2e27d9-db9b-4cd4-984f-2d9f2be856f1"
+        "outputId": "932f7770-232c-449c-a5ec-1ebc9f5d5a6a"
       },
       "execution_count": 16,
       "outputs": [
@@ -1358,7 +1357,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-272a9ea1-e0ff-4246-9de3-ed0c8b2093c6\">\n",
+              "  <div id=\"df-ca78ec98-c30b-4164-b306-d6dccc16f597\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1413,7 +1412,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-272a9ea1-e0ff-4246-9de3-ed0c8b2093c6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ca78ec98-c30b-4164-b306-d6dccc16f597')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1464,12 +1463,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-272a9ea1-e0ff-4246-9de3-ed0c8b2093c6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ca78ec98-c30b-4164-b306-d6dccc16f597 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-272a9ea1-e0ff-4246-9de3-ed0c8b2093c6');\n",
+              "          const element = document.querySelector('#df-ca78ec98-c30b-4164-b306-d6dccc16f597');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1499,7 +1498,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Because the three models have the same results and accuracy, we choose to use the KN-Classifier model because the fitting time for data from this model is the fastest compared to the other models."
+        "Because the three models have the same results and accuracy, we choose to use the SVM model on deployment and production phase."
       ],
       "metadata": {
         "id": "1YeBdaP7rMBg"
@@ -1517,15 +1516,15 @@
     {
       "cell_type": "code",
       "source": [
-        "# KN Classifier model is stored in the \"model_2\" variable\n",
-        "joblib.dump(model_2,'./kn_model.pkl')"
+        "# SVM model is stored in the \"model\" variable\n",
+        "joblib.dump(model,'./svm_model.pkl')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "c6AKuTHCrMxV",
-        "outputId": "2b51c8d4-c905-4622-d3f5-c27739561b1e"
+        "outputId": "1c3b5832-6f96-4074-d497-e93c19dfe701"
       },
       "execution_count": 17,
       "outputs": [
@@ -1533,7 +1532,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['./kn_model.pkl']"
+              "['./svm_model.pkl']"
             ]
           },
           "metadata": {},
