--- a/Flask-deployment/notebook/reccoffee_filtering.ipynb
+++ b/Flask-deployment/notebook/reccoffee_filtering.ipynb
@@ -88,7 +88,7 @@
     {
       "cell_type": "code",
       "source": [
-        "coffee = pd.read_csv('/content/coffee_clean_rev.csv')\n",
+        "coffee = pd.read_csv('/content/coffee_clean.csv')\n",
         "coffee.head(5)"
       ],
       "metadata": {
