--- a/Flask-deployment/notebook/recoffee_recommendation.ipynb
+++ b/Flask-deployment/notebook/recoffee_recommendation.ipynb
@@ -62,7 +62,7 @@
     {
       "cell_type": "code",
       "source": [
-        "coffee = pd.read_csv('coffee_recom_rev.csv')\n",
+        "coffee = pd.read_csv('coffee_recom.csv')\n",
         "coffee.head(5)"
       ],
       "metadata": {
