--- a/Flask-deployment/notebook/scraping_coffee.ipynb
+++ b/Flask-deployment/notebook/scraping_coffee.ipynb
@@ -1303,7 +1303,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_coffee.to_csv('coffee_fix.csv', index=False)"
+        "df_coffee.to_csv('coffee_rev.csv', index=False)"
       ],
       "metadata": {
         "execution": {
